# advent-of-code-2021

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
tests/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
