[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Johnny Lee <johnny.lee@ocado.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
advent-of-code-data = "^1.1.0"
black = "^21.11b1"
pylint = "^2.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
