[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Johnny Lee <johnny.lee@ocado.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
advent-of-code-data = "^1.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-name-in-module"
]